2006-01-10  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-options.c: Use newer function for setting
	the width of a GtkSpinButton.

	* src/network-utils/Makefile.am:
	* src/gnome-utils/gnc-html.c:
	* src/gnome/top-level.c: The gnucash gpg networking code isn't
	called from anywhere.  No need to compile it as part of the build.

	* src/register/register-gnome/gnucash-cursor.c:
	* src/register/register-gnome/gnucash-item-edit.c:
	* src/register/register-gnome/gnucash-grid.c:
	* src/register/register-gnome/gnucash-header.c:
	* src/gnome-utils/gnc-dense-cal.c:
	* src/gnome-utils/gnc-main-window.c:
	* src/gnome-utils/dialog-utils.c:
	* src/gnome-utils/dialog-options.c: Replace deprecated functions
	with their current equivalent.

2006-01-10  Derek Atkins  <derek@ihtfp.com>

	* make-gnucash-potfiles.in: ignore dangling symlinks when
	  building po/POTFILES.in

2006-01-10  Christian Stimming  <stimming@tuhh.de>

	* accounts/nb/*, configure.in: Add account templates for Norwegian
	(Bokmal) language; by Tor Harald Thorland <linux@strigen.com>; not
	fully functional so far.

2006-01-08  David Hampton  <hampton@employees.org>

	* src/gnome-utils/dialog-options.c: Add a button to clear the name
	of the currently selected file in a file chooser.

	* src/register/register-gnome/gnucash-item-list.c:
	* src/import-export/hbci/dialog-hbcitrans.c: The GTK2.4 headers
	are missing a named constant.

	* lib/goffice-0.0.4/goffice/glib24_26-compat.c: Fix a couple of
	compiler version issues.

2006-01-08  Derek Atkins  <derek@ihtfp.com>

	* Makefile.am: fix the dist-hook macro for po/POTFILES.in

2006-01-08  Neil Williams <linux@codehelp.co.uk>

	* src/import-export/qif-import/test/Makefile.am : OSX fix.
	* po/en_GB.po : (To assist the TP project,
	with help from Nigel Titley, GNU translator.)
	Remaining: 92 fuzzy translations, 1 untranslated message
	* . : Adding *.prj.bak to svn:ignore.

2006-01-08  Neil Williams <linux@codehelp.co.uk>
