@@ -440,7 +440,7 @@ gnc_window_adjust_for_screen(GtkWindow * window)
 
   screen_width = gdk_screen_width();
   screen_height = gdk_screen_height();
-  gdk_window_get_size(GTK_WIDGET(window)->window, &width, &height);
+  gdk_drawable_get_size(GTK_WIDGET(window)->window, &width, &height);
 
   if ((width <= screen_width) && (height <= screen_height))
     return;
