@@ -173,8 +173,7 @@ gnc_gnome_init (const char * arg0,
   gnc_free_argv (restargv);
 
   /* initialization required for gtkhtml */
-  gdk_rgb_init ();    
-  gtk_widget_set_default_colormap (gdk_rgb_get_cmap ());
+  gtk_widget_set_default_colormap (gdk_rgb_get_colormap ());
 
   /* use custom icon */
   fullname = gnc_gnome_locate_pixmap ("gnucash-icon.png");
